@@ -42,8 +42,10 @@ const LMS_SCROLLER_LIST_BUFFER = 500; // px
 const LMS_SCROLLER_GRID_BUFFER = 750; // px
 const LMS_MAX_PLAYERS = 100;
 const LMS_IMAGE_SZ = IS_HIGH_DPI ? 600 : 300;
+const LMS_QUEUE_IMAGE_SZ = IS_HIGH_DPI ? 150 : 75;
 const LMS_CURRENT_IMAGE_SZ = IS_HIGH_DPI ? 2048 : 1024;
 const LMS_IMAGE_SIZE = "_"+LMS_IMAGE_SZ+"x"+LMS_IMAGE_SZ+"_f";
+const LMS_QUEUE_IMAGE_SIZE = "_"+LMS_QUEUE_IMAGE_SZ+"x"+LMS_QUEUE_IMAGE_SZ+"_f";
 const LMS_CURRENT_IMAGE_SIZE = "_"+LMS_CURRENT_IMAGE_SZ+"x"+LMS_CURRENT_IMAGE_SZ+"_f";
 const LMS_TBAR_BGND_IMAGE_SIZE = IS_HIGH_DPI ? "_30x30_f" : "_15x15_f";
 const LMS_DEFAULT_LIBRARY_PREV = "0"; // Prior to 4.6.0 this was used as default library id.
